--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "angular": "^1.6.1",
+    "angular-ui-bootstrap": "^2.4.0",
     "angular-ui-router": "^0.3.2",
     "babel-preset-es2015": "^6.18.0",
     "del": "^2.2.2",
