--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dangertime2",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./server/index.js",
   "scripts": {
     "build": "browserify app.js -o libs.js"
   },
@@ -14,7 +14,12 @@
     "angular-ui-bootstrap": "^2.4.0",
     "angular-ui-router": "^0.3.2",
     "babel-preset-es2015": "^6.18.0",
+    "body-parser": "^1.15.2",
+    "cookie-parser": "^1.4.3",
+    "cors": "^2.8.1",
     "del": "^2.2.2",
+    "express": "^4.14.0",
+    "express-session": "^1.14.2",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-cachebust": "0.0.6",
@@ -23,6 +28,9 @@
     "gulp-sass": "^3.0.0",
     "gulp-sourcemaps": "^2.2.2",
     "gulp-strip-css-comments": "^1.2.0",
-    "gulp-uglify": "^2.0.0"
+    "gulp-uglify": "^2.0.0",
+    "massive": "^2.5.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0"
   }
 }
